made some changes to fix overflow issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,10 +3,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: 100%;
+  overflow-x:hidden;
+  overflow-wrap: normal;
 }
 .NavBar{
 position: relative;
-width: 100%;
+max-width: 100%;
 height: 10%;
 top: 0%;
 }
