--- a/client/src/components/card/style.css
+++ b/client/src/components/card/style.css
@@ -1,4 +1,5 @@
 .Card {
+  position: relative;
     display: flex;
     align-items: center;
     background-color: #ffffff;
@@ -8,30 +9,39 @@
     flex-direction: column;
   }
   
-  .card img {
-    width: 100%;
-    max-width: 300px;
+  .card-img {
+    position: relative;
+    display: flex;
+    max-width: 100%;
     border-radius: 8px;
   }
   
   .card h2 {
-    font-size: 24px;
+    font-size: 3vmin;
     margin-top: 16px;
     margin-bottom: 8px;
   }
   
-  .card p {
-    font-size: 16px;
+  .card-p {
+    display: flex;
+    position: relative;
+    font-size: 2vmin;
     text-align: center;
     margin-bottom: 16px;
   }
   
-  .card button {
+  .card-button {
+    display: flex;
+    position: relative;
+    max-width: 100%;
     background-color: #0077cc;
     color: #ffffff;
     border: none;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     padding: 8px 16px;
-    font-size: 16px;
+    font-size: 3vmin;
     cursor: pointer;
   }
   
