--- a/client/src/components/header/style.css
+++ b/client/src/components/header/style.css
@@ -3,9 +3,13 @@
     display:flex;
     background: rgba(65, 131, 196, 0.08);
     width:100%;
+    max-width: 100%;
+    flex-wrap: wrap;
 }
 .head{
     position: relative;
+    display: flex;
+    flex-direction: column;
     padding-top:15vmin;
     padding-bottom: 10vmin;
     width:50%;
@@ -42,10 +46,14 @@ font-weight: 400;
     position:relative;
     display:flex;
     padding: 5vmin;
-    width:50vmin;
-    height:35vmin;
+    width: 50vmin;
+    height: 40vmin;
+    max-width: 100%;
+    padding-top: 10vmin;
+    padding-bottom: 10vmin;
+
 }
-button{
+.header-button{
     position: relative;
     display:flex;
 background: #4183C4;
