--- a/client/src/components/navBar/style.css
+++ b/client/src/components/navBar/style.css
@@ -5,9 +5,10 @@ width: 100%;
 top:0%; */
 /* padding: '1rem'; */
 display:flex;
-justify-content: 'space-between';
+justify-content: space-between;
 background: rgba(255, 72, 72, 0.02);
 box-shadow: 0px 2px 18px -1px rgba(0, 0, 0, 0.19);
+flex-wrap: wrap;
 
 }
 .title{
@@ -18,7 +19,7 @@ left: 7%;
 font-family: 'Josefin Sans';
 font-style: italic;
 font-weight: 700;
-font-size: '1.5rem';
+/* font-size: '1.5rem'; */
 /* font-size: 22px;
 line-height: 22px; */
 
@@ -27,14 +28,18 @@ line-height: 22px; */
 
 
 ul{
-display: 'flex';
+display: flex;
 list-style-type:none;
 position: relative;
-height: 2%;
-left:43%;
-width:40%;
+height: 5%;
+padding-right: 5%;
+padding-left: 5%;
+width:fit-content;
+flex-direction: row;
+/* margin-left:30rem; */
 top:0%;
 font-family: 'Josefin Sans';
+font-size: 16px;
 font-style: normal;
 font-weight: 400;
 margin-top: 2.5%;
